// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetDistribution correctly 1`] = `
<section
  className="fdk-distribution-item mb-1"
>
  <ListRegular
    bottomMargin={false}
    title={null}
  >
    <button
      className="w-100 p-0"
      onClick={[Function]}
    >
      <div
        className="row list-regular--item text-left"
      >
        <div
          className="col-4 pl-0"
        >
          <span>
            <strong>
              Format
            </strong>
          </span>
        </div>
        <div
          className="col-8"
        >
          <span
            key="0"
          >
            GPX
          </span>
        </div>
        <i
          className="fa fdk-color-blue-dark fa-chevron-down"
        />
      </div>
      <div
        className="row list-regular--item text-left mb-2 closedCollapse"
      >
        <div
          className="col-4 pl-0 fdk-text-strong"
        >
          Description
        </div>
        <div
          className="col-8 show-more__cropped-box"
        >
          Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.
        </div>
      </div>
    </button>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <TwoColRow
        col1="AccessURL"
        col2={
          Array [
            <LinkExternal
              prefLabel="https://kartkatalog.geonorge.no/metadata/uuid/45e9ba77-388c-40eb-87df-e34e9d9ab300"
              uri="https://kartkatalog.geonorge.no/metadata/uuid/45e9ba77-388c-40eb-87df-e34e9d9ab300"
            />,
          ]
        }
      />
    </Collapse>
  </ListRegular>
</section>
`;

exports[`should render DatasetDistribution correctly with no props 1`] = `
<section
  className="fdk-distribution-item mb-1"
>
  <ListRegular
    bottomMargin={false}
    title={null}
  >
    <button
      className="w-100 p-0"
      onClick={[Function]}
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    />
  </ListRegular>
</section>
`;
